# fast-disk-bloom-filter

./: .gitignore  CMakeLists.txt  readme.md
include/: MurmurHash3.h  argh.h  bloom.h  buffer_pool.h  file_manager.h
include/parlay/: primitives.h
src/: CMakeLists.txt  MurmurHash3.cpp  binding.cpp  bloom.cpp  buffer_pool.cpp  file_manager.cpp
test/: CMakeLists.txt  accuracy_bloom.cpp  benchmark_bloom.cpp  benchmark_unordered_set.cpp  test_bloom.cpp
